Fix logo with dark mode enabled

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -101,15 +101,15 @@ Table of Contents
   --current-light-tertiary: var(--theme-light-tertiary); }
 
 .is-style-dark {
-  --current-color-primary: var(--theme-color-primary);
-  --current-color-secondary: var(--theme-color-secondary);
-  --current-color-tertiary: var(--theme-color-tertiary);
-  --current-dark-primary: var(--theme-light-secondary);
-  --current-dark-secondary: var(--theme-light-primary);
-  --current-dark-tertiary: var(--theme-light-tertiary);
-  --current-light-primary: var(--theme-dark-primary);
-  --current-light-secondary: var(--theme-dark-secondary);
-  --current-light-tertiary: var(--theme-dark-tertiary);
+  --current-color-primary: var(--sm-color-primary);
+  --current-color-secondary: var(--sm-color-secondary);
+  --current-color-tertiary: var(--sm-color-tertiary);
+  --current-dark-primary: var(--sm-light-secondary);
+  --current-dark-secondary: var(--sm-light-primary);
+  --current-dark-tertiary: var(--sm-light-tertiary);
+  --current-light-primary: var(--sm-dark-primary);
+  --current-light-secondary: var(--sm-dark-secondary);
+  --current-light-tertiary: var(--sm-dark-tertiary);
   background-color: var(--current-light-primary);
   color: var(--current-dark-secondary); }
   .is-style-dark a {
@@ -117,15 +117,15 @@ Table of Contents
     text-decoration: underline; }
 
 .is-style-darker {
-  --current-color-primary: var(--theme-color-primary);
-  --current-color-secondary: var(--theme-color-secondary);
-  --current-color-tertiary: var(--theme-color-tertiary);
-  --current-dark-primary: var(--theme-light-secondary);
-  --current-dark-secondary: var(--theme-light-primary);
-  --current-dark-tertiary: var(--theme-light-tertiary);
-  --current-light-primary: var(--theme-dark-tertiary);
-  --current-light-secondary: var(--theme-dark-secondary);
-  --current-light-tertiary: var(--theme-dark-primary);
+  --current-color-primary: var(--sm-color-primary);
+  --current-color-secondary: var(--sm-color-secondary);
+  --current-color-tertiary: var(--sm-color-tertiary);
+  --current-dark-primary: var(--sm-light-secondary);
+  --current-dark-secondary: var(--sm-light-primary);
+  --current-dark-tertiary: var(--sm-light-tertiary);
+  --current-light-primary: var(--sm-dark-tertiary);
+  --current-light-secondary: var(--sm-dark-secondary);
+  --current-light-tertiary: var(--sm-dark-primary);
   background-color: var(--current-light-primary);
   color: var(--current-dark-secondary); }
   .is-style-darker a {
@@ -133,15 +133,15 @@ Table of Contents
     text-decoration: underline; }
 
 .is-style-accent {
-  --current-color-primary: var(--theme-dark-primary);
-  --current-color-secondary: var(--theme-dark-secondary);
-  --current-color-tertiary: var(--theme-dark-tertiary);
-  --current-dark-primary: var(--theme-light-secondary);
-  --current-dark-secondary: var(--theme-light-primary);
-  --current-dark-tertiary: var(--theme-light-tertiary);
-  --current-light-primary: var(--theme-color-primary);
-  --current-light-secondary: var(--theme-color-secondary);
-  --current-light-tertiary: var(--theme-color-tertiary);
+  --current-color-primary: var(--sm-dark-primary);
+  --current-color-secondary: var(--sm-dark-secondary);
+  --current-color-tertiary: var(--sm-dark-tertiary);
+  --current-dark-primary: var(--sm-light-secondary);
+  --current-dark-secondary: var(--sm-light-primary);
+  --current-dark-tertiary: var(--sm-light-tertiary);
+  --current-light-primary: var(--sm-color-primary);
+  --current-light-secondary: var(--sm-color-secondary);
+  --current-light-tertiary: var(--sm-color-tertiary);
   background-color: var(--current-light-primary);
   color: var(--current-dark-secondary); }
 
@@ -2594,15 +2594,15 @@ body, .site, .site-content {
     color: var(--theme-light-tertiary); }
 
 .novablocks-u-background-dark {
-  --current-color-primary: var(--theme-color-primary);
-  --current-color-secondary: var(--theme-color-secondary);
-  --current-color-tertiary: var(--theme-color-tertiary);
-  --current-dark-primary: var(--theme-light-secondary);
-  --current-dark-secondary: var(--theme-light-primary);
-  --current-dark-tertiary: var(--theme-light-tertiary);
-  --current-light-primary: var(--theme-dark-primary);
-  --current-light-secondary: var(--theme-dark-secondary);
-  --current-light-tertiary: var(--theme-dark-tertiary); }
+  --current-color-primary: var(--sm-color-primary);
+  --current-color-secondary: var(--sm-color-secondary);
+  --current-color-tertiary: var(--sm-color-tertiary);
+  --current-dark-primary: var(--sm-light-secondary);
+  --current-dark-secondary: var(--sm-light-primary);
+  --current-dark-tertiary: var(--sm-light-tertiary);
+  --current-light-primary: var(--sm-dark-primary);
+  --current-light-secondary: var(--sm-dark-secondary);
+  --current-light-tertiary: var(--sm-dark-tertiary); }
 
 .novablocks-map__marker-name {
   position: absolute;
